# src/routes/v1/user-route.ts
@@ -3,14 +3,15 @@ import { UserSignInSchema, UserSignUpSchema } from "../../schema/user-schema";
 import { UserController } from "../../controllers/user-controller";
 import { StatusCode } from "../../utils/consts";
 import { validate } from "../../middlewars/validation";
+import CustomError from "../../error/custom-error";
 export const userRouter = express.Router();
+const controllers = new UserController();
 
 userRouter.post(
   "/signup",
   validate(UserSignUpSchema),
   async (req: Request, res: Response, next: NextFunction) => {
     try {
-      const controllers = new UserController();
       const requestBody = req.body;
       await controllers.RegisterUser(requestBody);
       return res.status(StatusCode.Created).send({ message: "Create Success" });
@@ -23,26 +24,26 @@ userRouter.get(
   "/verify",
   async (req: Request, res: Response, next: NextFunction) => {
     try {
-      const controllers = new UserController();
       const token = req.query.token as string; // Assuming the token is passed as a query parameter
       await controllers.VerifyEmail(token);
 
-      return res.status(StatusCode.Found).json("User already verified");
+      return res.status(StatusCode.Found).json("Successfully verifiy");
     } catch (error: any) {
       res.status(StatusCode.BadRequest).json({ message: error.message });
     }
   }
 );
 
-// userRouter.post("/login", validate(UserSignInSchema), async (req, res) => {
-//   try {
-//     const controllers = new UserController();
-//     const requestBody = req.body;
-//     const response = await controllers.LoginWithEmail(requestBody);
-//     return res
-//       .status(StatusCode.Created)
-//       .send({ message: "Login Success", data: response });
-//   } catch (error: any) {
-//     res.status(StatusCode.NotFound).json({ message: error.message });
-//   }
-// });
+userRouter.post("/login", validate(UserSignInSchema), async (req, res) => {
+  try {
+    const requestBody = req.body;
+    const token = await controllers.LoginWithEmail(requestBody);
+    return res.status(StatusCode.OK).json({ message: "Login Success" });
+  } catch (error: any) {
+    let statusCode = StatusCode.BadRequest; // Default status code for validation errors
+    if (error instanceof CustomError) {
+      statusCode = error.statusCode; // Use the status code from the CustomError if available
+    }
+    res.status(statusCode).json({ message: error.message });
+  }
+});
